--- a/03_TextCorpus.ipynb
+++ b/03_TextCorpus.ipynb
@@ -5,48 +5,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a text corpus with a minimum of 200 words (unique content). Implement the\n",
-    "following text processing\n",
-    "\n",
-    "• Word segmentation\n",
-    "\n",
-    "• Sentence segmentation\n",
-    "\n",
-    "• Convert to Lowercase\n",
-    "\n",
-    "• Stop words removal\n",
-    "\n",
-    "• Stemming\n",
-    "\n",
-    "• Lemmatization\n",
-    "\n",
-    "• Part of speech tagger"
+    "## **Digital Assignment 1**\n",
+    "## **Darshini. R - 20BCE1054**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a text corpus with a minimum of 200 words (unique content). Implement the following text processing\n",
+    "* Word segmentation\n",
+    "* Sentence segmentation\n",
+    "* Convert to Lowercase\n",
+    "* Stop words removal\n",
+    "* Stemming\n",
+    "* Lemmatization\n",
+    "* Part of speech tagger"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package omw-1.4 to\n",
-      "[nltk_data]     C:\\Users\\darsh\\AppData\\Roaming\\nltk_data...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import nltk\n",
     "from nltk.tokenize import word_tokenize, sent_tokenize\n",
@@ -54,12 +36,12 @@
     "from nltk.stem import SnowballStemmer, WordNetLemmatizer\n",
     "#nltk.download('stopwords')\n",
     "#nltk.download('wordnet')\n",
-    "nltk.download('omw-1.4')"
+    "#nltk.download('omw-1.4')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Word Segmentation**"
+    "### **Word Segmentation**"
    ]
   },
   {
@@ -110,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Sentence Segmentation**"
+    "### **Sentence Segmentation**"
    ]
   },
   {
@@ -138,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Convert to Lowercase**"
+    "### **Convert to Lowercase**"
    ]
   },
   {
@@ -164,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Stop words removal**"
+    "### **Stop words removal**"
    ]
   },
   {
@@ -191,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Stemming**"
+    "### **Stemming**"
    ]
   },
   {
@@ -218,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Lemmatization**"
+    "### **Lemmatization**"
    ]
   },
   {
@@ -245,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Part of Speech Tagger**"
+    "### **Part of Speech Tagger**"
    ]
   },
   {
