--- a/02_Corpus.ipynb
+++ b/02_Corpus.ipynb
@@ -5,36 +5,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Explore the corpora available in NLTK (any two) \n",
-    "\n",
-    "• Raw corpus\n",
-    "\n",
-    "• POS tagged\n",
-    "\n",
-    "• Parsed\n",
-    "\n",
-    "• Multilingual aligned\n",
-    "\n",
-    "• Spoken language\n",
-    "\n",
-    "• Semantic tagged"
+    "## **Digital Assignment 1**\n",
+    "## **Darshini. R - 20BCE1054**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Explore the corpora available in NLTK (any two) \n",
+    "* Raw corpus\n",
+    "* POS tagged\n",
+    "* Parsed\n",
+    "* Multilingual aligned\n",
+    "* Spoken language\n",
+    "* Semantic tagged"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package universal_tagset to\n",
-      "[nltk_data]     C:\\Users\\darsh\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping taggers\\universal_tagset.zip.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import nltk\n",
     "# nltk.download('punkt')\n",
@@ -50,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**POS Tagged**"
+    "### **POS Tagged**"
    ]
   },
   {
@@ -160,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Parsed**"
+    "### **Parsed**"
    ]
   },
   {
