--- a/01_BrownCorpus.ipynb
+++ b/01_BrownCorpus.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Utilize Python NLTK (Natural Language Tool Kit) Platform and do the following.\n",
+    "### 1. Utilize Python NLTK (Natural Language Tool Kit) Platform and do the following.\n",
     "### Install relevant Packages and Libraries"
    ]
   },
