--- a/03_TextCorpus.ipynb
+++ b/03_TextCorpus.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create a text corpus with a minimum of 200 words (unique content). Implement the following text processing\n",
+    "### 3. Create a text corpus with a minimum of 200 words (unique content). Implement the following text processing\n",
     "* Word segmentation\n",
     "* Sentence segmentation\n",
     "* Convert to Lowercase\n",
