--- a/01_BrownCorpus.ipynb
+++ b/01_BrownCorpus.ipynb
@@ -72,19 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size of words in Brown Corpus:  1439319\n"
+      "Size of word tokens in Brown Corpus:  1439319\n"
      ]
     }
    ],
    "source": [
-    "print(\"Size of words in Brown Corpus: \",len(TokenizedWords))"
+    "print(\"Size of word tokens in Brown Corpus: \",len(TokenizedWords))"
    ]
   },
   {
